Add node version and start command

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "backpack-app",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=24"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "start": "node ./dist/server/entry.mjs",
     "preview": "astro preview",
     "astro": "astro",
     "storybook": "storybook dev -p 6006",
