fogot password and unit testing

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,15 @@
 # Public variables (exposed to client-side code)
 # Prefix with PUBLIC_ to make them available in the browser
 PUBLIC_API_URL=http://localhost:4321
+PUBLIC_APP_URL=http://localhost:4321
 
 # Private variables (server-side only)
 # NO PUBLIC_ prefix = only available in server code
 DATABASE_URL=./database.db
 SESSION_SECRET=your-secret-key-here
+
+# Resend (email service for password reset)
+RESEND_API_KEY=your-resend-api-key
+RESEND_FROM_EMAIL=noreply@yourdomain.com
 
 # Note: import.meta.env.PROD, DEV, MODE are built-in and don't need to be defined here
